@@ -15341,6 +15341,10 @@ Subject length lower bound = 0
 /()(?<=(?0))/
 Failed: error 125 at offset 2: lookbehind assertion is not fixed length
 
+/(?<!|!(?<!))/
+
+/(?<!|!|!||||||(?<!)||(?<!)!|!||(?<!)!|!(?<!)!|!|!|!||||!!|<!)!|!||||!|/
+
 # End of testinput2 
 Error -63: PCRE2_ERROR_BADDATA (unknown error number)
 Error -62: bad serialized data
